[metadata]
name = aiotp
version = 1.0.0
description = One-time password package in Python

long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/albu-org/aiotp

author = albu
author_email = albuorg@gmail.com

keywords = otp, totp, hotp, 2FA, aiotp, one-time

python_requires = ~=3.7

[options]
zip_safe = False